src/main/resources/kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-app-service
spec:
  selector:
    app: my-spring-app
  ports:
    - protocol: TCP
      port: 8080  # Exposed port on the service
      targetPort: 8080  # Port on the pod
  type: LoadBalancer
